--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.navStyle {
+  display: flex;
+  justify-content: space-around;
+  border: 3px solid black;
+  padding: 8px;
+  width: 90%;
+  margin: auto;
+}
